# FuncArgsAnalysis

./: .gigignore  CMakeLists.txt  FunctionArgsAnalysis.project
include/: ArgumentsAnalysisPass.h
resources/: addf.c  addf.ll  f_loop.c  f_loop.ll  f_loop_opt.ll  grav.c  grav.ll  grav_2.c  grav_2.ll  loop_1.ll  loop_2.ll
src/: ArgumentAnalysisPass.cpp  CMakeLists.txt  main.cpp
